glz::generic now preserves insertion order -- glz::ordered_map & glz::ordered_small_map (#2325)
* glz::ordered_map

* Update ordered_map.hpp

* Reduce stack size of ordered_map

* Update ordered_map.hpp

* Update ordered_map_benchmark.cpp

* bloom filter

* Update ordered_map.hpp

* Update ordered_map.hpp

* ordered_dict

* heterogeneous support

* renaming maps

* remove slower tsl::ordered_map

* generic_json using ordered_small_map with flexible maps

* generic benchmarks

* generic_benchmark and smaller size for ordered_small_map

* Update ordered_small_map_test.cpp

* try_emplace

* Update json_test.cpp

* Update yaml_test.cpp

* Update README.md

* Update yaml_conformance.cpp

* remove unordered_map unneeded include

* Update lib_test.cpp

* Update api_test.cpp

* documentation for ordered maps

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -73,3 +73,46 @@ target_compile_options(string_write_benchmark PRIVATE
   $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-O3 -march=native>
   $<$<CXX_COMPILER_ID:MSVC>:/O2>
 )
+
+# Binary search benchmark (std::lower_bound vs branchless)
+add_executable(binary_search_benchmark binary_search_benchmark.cpp)
+target_link_libraries(binary_search_benchmark PRIVATE
+  glaze
+  bencher::bencher
+)
+target_compile_options(binary_search_benchmark PRIVATE
+  $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-O3 -march=native>
+  $<$<CXX_COMPILER_ID:MSVC>:/O2>
+)
+
+# Ordered map benchmark (glz::ordered_small_map vs glz::ordered_map)
+add_executable(ordered_map_benchmark ordered_map_benchmark.cpp)
+target_link_libraries(ordered_map_benchmark PRIVATE
+  glaze
+  bencher::bencher
+)
+target_compile_options(ordered_map_benchmark PRIVATE
+  $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-O3 -march=native>
+  $<$<CXX_COMPILER_ID:MSVC>:/O2>
+)
+
+# Generic JSON map type benchmark (ordered_small_map vs std::map)
+add_executable(generic_benchmark generic_benchmark.cpp)
+target_link_libraries(generic_benchmark PRIVATE
+  glaze
+  bencher::bencher
+)
+target_compile_options(generic_benchmark PRIVATE
+  $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-O3 -march=native>
+  $<$<CXX_COMPILER_ID:MSVC>:/O2>
+)
+
+# Ordered map memory comparison
+add_executable(ordered_map_memory ordered_map_memory.cpp)
+target_link_libraries(ordered_map_memory PRIVATE
+  glaze
+)
+target_compile_options(ordered_map_memory PRIVATE
+  $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-O3 -march=native>
+  $<$<CXX_COMPILER_ID:MSVC>:/O2>
+)
