--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -122,6 +122,8 @@ add_subdirectory(cbor_test)
 add_subdirectory(buffer_pool_test)
 add_subdirectory(cli_menu_test)
 add_subdirectory(compare_test)
+add_subdirectory(ordered_small_map_test)
+add_subdirectory(ordered_map_test)
 add_subdirectory(csv_test)
 add_subdirectory(eigen_test)
 add_subdirectory(example_json)
